
SUM of Nos from GESIS with Employment rate, by sex from Estatwrap from Germany.

This would show: Integration of Germany. 

In ISEM paper, we had with respect to size of datasets:

1) 2 DS with 20,268 triples
3a) 4 DS with 24,636 triples
3b) 8 DS with 35,482 triples

We now would like to extend this.

==2014-05-08==
* Convert-Cube / Merge-Cubes implemented.

==2014-05-07==
* Problem: So far we only supported one Drill-Across per query. 
* Solution: Now, the Drill-Across visitor goes through the entire tree and picks all non-Drill-Across subtrees converted to Iterator with OLAP-to-SPARQL.

* Problem: Results are empty.
* Solution: For nested-loop join, we need to be able to init the Drill-Across iterator, which first was not implemented.

==2014-05-04==
* Removed all compliation problems due to refactoring.
* Correctly computed comparison of Employment Fear vs. Real GDP Growth Rate.
* Growth rate:
** http://epp.eurostat.ec.europa.eu/tgm/table.do?tab=table&init=1&plugin=1&language=en&pcode=tec00115 (not tsieb020, anymore, renamed? See number of triples)
** http://estatwrap.ontologycentral.com/data/tec00115
* Integration/Entity consolidation of gesis:geo and estatwrap:geo as well as gesis-geo:00 and estatwrap-geo:DE included.
* No complex measure included.

==2014-05-03==
* Lots of refactoring (Restrictions are now Nodes)
* Worked on entity consolidation...
* Problem: If we compare own Nodes with Nodes from metadata SPARQL queries, we can never be sure when it is a Resource and when it is a Literal. In some case we sometimes get returned Literal and sometimes Resources (e.g., for measures).
Solution: In those cases, we compare the toString results.
* See: http://linked-data-cubes.org/index.php/EmbeddedSesameEngine#Entity_Consolitation
4-05-02==
* No success with entity consolidation for Drill-Across.
* Problem: If I just replace all occurrences of a URI with the canonical form, I have the problem 